fix: restore container width on smaller devices

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -205,9 +205,3 @@ small span {
     max-height: 700px;
   }
 }
-
-@media (max-width: 600px) {
-  .container {
-    height: 100vh;
-  }
-}
